# benchmark

./: Cargo.toml  README.md
.cargo/: config
data/: large_vec.json  many_fields.json  nested_json.json  short_json.json
examples/: deserialize.rs  serialize.rs
src/: lib.rs
