[package]
name = "benchmark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = "fat"
codegen-units = 1
incremental = false

[dependencies]
serde = { version = "1.0.147", features = ["derive"] }
simd-json = "0.10.6"
serde_json = "1.0.93"
getopts = { version = "0.2"}
# memory allocator
mimalloc = { version = "*", default-features = false, optional = true}
jemallocator = { version = "0.5", optional = true}


[[example]]
name = "deserialize"


[[example]]
name = "serialize"